kube-Mark-10.1/service.yml
apiVersion: v1
kind: Service
metadata:
  name: python-serv
spec:
  type: NodePort
  selector:
    app: python-app 
      #app name at template
  ports:
    - port: 80
      targetPort: 8000 
        #application port
      nodePort: 30007
