kube-Mark-10.1/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
spec:
  ingressClassName: nginx
  rules:
  - host: "sai.dev.com"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: python-serv
            port:
              number: 90
